--- a/board/am237_core/project_example/projects_keil5/example_am237_core.uvprojx
+++ b/board/am237_core/project_example/projects_keil5/example_am237_core.uvprojx
@@ -791,6 +791,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\components\drivers\source\sensor\am_sensor_as7262_uart.c</FilePath>
             </File>
+            <File>
+              <FileName>am_sensor_as5600.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\components\drivers\source\sensor\am_sensor_as5600.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1571,6 +1576,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am237_core\sensor\demo_zlg237_core_sensor_as7262_uart.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_zlg237_core_sensor_as5600.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am237_core\sensor\demo_zlg237_core_sensor_as5600.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2016,6 +2026,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\std\sensor\as7262\demo_std_as7262_int.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_std_5600.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\std\sensor\as5600\demo_std_5600.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2320,6 +2335,11 @@
               <FileName>am_hwconf_sensor_as7262_uart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_sensor_as7262_uart.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_sensor_as5600.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_sensor_as5600.c</FilePath>
             </File>
           </Files>
         </Group>
