修复引脚中断异常代码，增加按键输入事件例程

--- a/board/hc32f460_core/project_example/projects_keil5/example_hc32f46x.uvprojx
+++ b/board/hc32f460_core/project_example/projects_keil5/example_hc32f46x.uvprojx
@@ -15,7 +15,7 @@
         <TargetCommonOption>
           <Device>HC32F460PETB</Device>
           <Vendor>HDSC</Vendor>
-          <PackID>HDSC.HC32F46x.1.0.3</PackID>
+          <PackID>HDSC.HC32F46x.1.0.1</PackID>
           <PackURL>https://raw.githubusercontent.com/hdscmcu/pack/master/</PackURL>
           <Cpu>IROM(0x00000000,0x80000) IROM2(0x03000C00,0x003C0) IRAM(0x1FFF8000,0x2F000) IRAM2(0x200F0000,0x1000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -1875,6 +1875,11 @@
               <FileName>demo_hc32f460_core_usbd_hid_custom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\amhc32f460_core\usbd\demo_hc32f460_core_usbd_hid_custom.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f460_core_std_key_input_event.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\amhc32f460_core\input_event\demo_hc32f460_core_std_key_input_event.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4109,6 +4114,11 @@
               <FileName>demo_hc32f460_core_usbd_hid_custom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\amhc32f460_core\usbd\demo_hc32f460_core_usbd_hid_custom.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f460_core_std_key_input_event.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\amhc32f460_core\input_event\demo_hc32f460_core_std_key_input_event.c</FilePath>
             </File>
           </Files>
         </Group>
