--- a/board/hc32f07x_core/project_example/project_keil5/example_amf07x_core.uvprojx
+++ b/board/hc32f07x_core/project_example/project_keil5/example_amf07x_core.uvprojx
@@ -394,7 +394,7 @@
             </VariousControls>
           </Aads>
           <LDads>
-            <umfTarg>1</umfTarg>
+            <umfTarg>0</umfTarg>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
             <noStLib>0</noStLib>
@@ -403,7 +403,7 @@
             <TextAddressRange>0x00000000</TextAddressRange>
             <DataAddressRange>0x10000000</DataAddressRange>
             <pXoBase></pXoBase>
-            <ScatterFile>.\template_am116_core.sct</ScatterFile>
+            <ScatterFile>.\example_amf07x_core.sct</ScatterFile>
             <IncludeLibs></IncludeLibs>
             <IncludeLibsPath></IncludeLibsPath>
             <Misc></Misc>
@@ -787,11 +787,6 @@
           <GroupName>soc</GroupName>
           <Files>
             <File>
-              <FileName>am_hc32_adc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\adc\am_hc32_adc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_adtim_cap.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\adtim\am_hc32_adtim_cap.c</FilePath>
@@ -997,11 +992,6 @@
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\flash\am_hc32f07x_flash.c</FilePath>
             </File>
             <File>
-              <FileName>amhw_hc32_rcc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc.c</FilePath>
-            </File>
-            <File>
               <FileName>amhw_hc32f07x_rcc.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32f07x_rcc.c</FilePath>
@@ -1015,6 +1005,11 @@
               <FileName>am_hc32f07x_cts.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\cts\am_hc32f07x_cts.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hc32f07x_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\hdsc\drivers\source\adc\am_hc32f07x_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1466,6 +1461,31 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\pca\demo_hc32f07x_core_drv_pca_8bit_pwm.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_printer_counter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_printer_counter.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_vcom.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1560,11 +1580,6 @@
               <FileName>demo_hc32_hw_gpio_trigger.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\gpio\demo_hc32_hw_gpio_trigger.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lcd\demo_hc32_hw_lcd.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32_hw_lpuart_int.c</FileName>
@@ -1700,6 +1715,36 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lcd\demo_hc32f07x_hw_lcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_printer_counter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_printer_counter.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_vcom.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2175,6 +2220,31 @@
               <FileName>am_hwconf_hc32f07x_usb_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_mouse.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usbd_vcom.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hc32f07x_usbd_cdc_vcom.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hc32f07x_usbd_cdc_vcom.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -2961,11 +3031,6 @@
           <GroupName>soc</GroupName>
           <Files>
             <File>
-              <FileName>am_hc32_adc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\adc\am_hc32_adc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_adtim_cap.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\adtim\am_hc32_adtim_cap.c</FilePath>
@@ -3171,11 +3236,6 @@
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\flash\am_hc32f07x_flash.c</FilePath>
             </File>
             <File>
-              <FileName>amhw_hc32_rcc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc.c</FilePath>
-            </File>
-            <File>
               <FileName>amhw_hc32f07x_rcc.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32f07x_rcc.c</FilePath>
@@ -3189,6 +3249,11 @@
               <FileName>am_hc32f07x_cts.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\cts\am_hc32f07x_cts.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hc32f07x_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\hdsc\drivers\source\adc\am_hc32f07x_adc.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3640,6 +3705,31 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\pca\demo_hc32f07x_core_drv_pca_8bit_pwm.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_printer_counter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_printer_counter.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_vcom.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3734,11 +3824,6 @@
               <FileName>demo_hc32_hw_gpio_trigger.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\gpio\demo_hc32_hw_gpio_trigger.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lcd\demo_hc32_hw_lcd.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32_hw_lpuart_int.c</FileName>
@@ -3874,6 +3959,36 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lcd\demo_hc32f07x_hw_lcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_printer_counter.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_printer_counter.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\usbd\demo_hc32f07x_usbd_vcom.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4349,6 +4464,31 @@
               <FileName>am_hwconf_hc32f07x_usb_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_mouse.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_msc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_msc.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_keyboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_keyboard.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usb_printer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usb_printer.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_hc32f07x_usbd_vcom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_usbd_vcom.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hc32f07x_usbd_cdc_vcom.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hc32f07x_usbd_cdc_vcom.lib</FilePath>
             </File>
           </Files>
         </Group>
