添加STM32F103RBT6 eclipse工程

--- a/board/stm32f103rbt6_core/project_example/projects_eclipse/.project
+++ b/board/stm32f103rbt6_core/project_example/projects_eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>example_am237_core</name>
+	<name>example_stm32f103rbt6_core</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -115,7 +115,7 @@
 		</variable>
 		<variable>
 			<name>copy_PARENT123456789</name>
-			<value>$%7Bcopy_PARENT12345678%7D/am237_core/project_example</value>
+			<value>$%7Bcopy_PARENT12345678%7D/stm32f103rbt6_core/project_example</value>
 		</variable>
 	</variableList>
 </projectDescription>
