--- a/board/aml165_core/project_example/project_keil5/example_aml165_core.uvprojx
+++ b/board/aml165_core/project_example/project_keil5/example_aml165_core.uvprojx
@@ -10,18 +10,18 @@
       <TargetName>debug</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060061::V5.06 update 1 (build 61)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
-          <Device>ZLG116</Device>
+          <Device>ZML165</Device>
           <Vendor>Generic</Vendor>
-          <PackID>ZLG.ZLG100_DFP.1.0.1</PackID>
+          <PackID>ZLG.ZML16x_DFP.1.0.0</PackID>
           <PackURL>http://www.zlg.cn/</PackURL>
-          <Cpu>IROM(0x08000000,0x10000) IRAM(0x20000000,0x2000) CPUTYPE("Cortex-M0") CLOCK(12000000) ELITTLE</Cpu>
+          <Cpu>IRAM(0x20000000,0x1000) IROM(0x08000000,0x8000) CPUTYPE("Cortex-M0") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0ZLG116 -FS08000000 -FL010000 -FP0($$Device:ZLG116$Flash\ZLG116.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0ZML165 -FS08000000 -FL08000 -FP0($$Device:ZML165$Flash\ZML165.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
           <RegisterFile></RegisterFile>
           <MemoryEnv></MemoryEnv>
@@ -33,7 +33,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:ZLG116$SVD\ZLG100.svd</SFDFile>
+          <SFDFile>$$Device:ZML165$SVD\ZLG100.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -138,7 +138,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"" ()</Flash3>
+          <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -185,11 +185,10 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
-            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
-            <useUlib>0</useUlib>
+            <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
@@ -246,12 +245,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x2000</Size>
+                <Size>0x1000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x8000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -276,7 +275,7 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x8000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -301,7 +300,7 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x2000</Size>
+                <Size>0x1000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -325,7 +324,7 @@
             <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
-            <uC99>0</uC99>
+            <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
             <v6Lang>0</v6Lang>
@@ -339,7 +338,7 @@
               <MiscControls></MiscControls>
               <Define>AM_VDEBUG AM_CORTEX_M0 ZML165</Define>
               <Undefine></Undefine>
-              <IncludePath>..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\board/bsp_common/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\..\..\..\examples\board\am165_core;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\interface;..\..\..\..\soc\zlg\zml165;..\..\..\..\soc/zlg/drivers/include/adc;..\..\..\..\soc/zlg/drivers/include/bkp;..\..\..\..\soc/zlg/drivers/include/clk;..\..\..\..\soc/zlg/drivers/include/cmp;..\..\..\..\soc/zlg/drivers/include/crc;..\..\..\..\soc/zlg/drivers/include/dac;..\..\..\..\soc/zlg/drivers/include/dma;..\..\..\..\soc/zlg/drivers/include/exti;..\..\..\..\soc/zlg/drivers/include/flash;..\..\..\..\soc/zlg/drivers/include/gpio;..\..\..\..\soc/zlg/drivers/include/i2c;..\..\..\..\soc/zlg/drivers/include/pwr;..\..\..\..\soc/zlg/drivers/include/rcc;..\..\..\..\soc/zlg/drivers/include/spi;..\..\..\..\soc/zlg/drivers/include/syscfg;..\..\..\..\soc/zlg/drivers/include/tim;..\..\..\..\soc/zlg/drivers/include/uart;..\..\..\..\soc/zlg/drivers/include/wdt;..\..\..\..\components\bootloader\include\core;..\..\..\..\components\usb\device\class\include;..\..\..\..\components\usb\include;..\..\..\..\components\usb\osa;..\..\..\..\components\usb\device;..\..\..\..\components\usb\device\common\include;..\..\..\..\examples\board\am165_core</IncludePath>
+              <IncludePath>..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\board/bsp_common/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\..\..\..\examples\board\am165_core;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\interface;..\..\..\..\soc\zlg\zml165;..\..\..\..\soc/zlg/drivers/include/adc;..\..\..\..\soc/zlg/drivers/include/bkp;..\..\..\..\soc/zlg/drivers/include/clk;..\..\..\..\soc/zlg/drivers/include/cmp;..\..\..\..\soc/zlg/drivers/include/crc;..\..\..\..\soc/zlg/drivers/include/dac;..\..\..\..\soc/zlg/drivers/include/dma;..\..\..\..\soc/zlg/drivers/include/exti;..\..\..\..\soc/zlg/drivers/include/flash;..\..\..\..\soc/zlg/drivers/include/gpio;..\..\..\..\soc/zlg/drivers/include/i2c;..\..\..\..\soc/zlg/drivers/include/pwr;..\..\..\..\soc/zlg/drivers/include/rcc;..\..\..\..\soc/zlg/drivers/include/spi;..\..\..\..\soc/zlg/drivers/include/syscfg;..\..\..\..\soc/zlg/drivers/include/tim;..\..\..\..\soc/zlg/drivers/include/uart;..\..\..\..\soc/zlg/drivers/include/wdt;..\..\..\..\components\bootloader\include\core;..\..\..\..\components\usb\device\class\include;..\..\..\..\components\usb\include;..\..\..\..\components\usb\osa;..\..\..\..\components\usb\device;..\..\..\..\components\usb\device\common\include;..\..\..\..\examples\board\am165_core;..\..\..\..\components\modbus\include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -352,7 +351,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <ClangAsOpt>1</ClangAsOpt>
+            <uClangAs>0</uClangAs>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -1338,6 +1337,16 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am165_core\wdg\demo_aml165_core_std_wwdg.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_aml165_core_mb_master.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am165_core\modbus\demo_aml165_core_mb_master.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_aml165_core_mb_slave.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am165_core\modbus\demo_aml165_core_mb_slave.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2065,6 +2074,16 @@
             </File>
           </Files>
         </Group>
+        <Group>
+          <GroupName>modbus</GroupName>
+          <Files>
+            <File>
+              <FileName>modbus.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\components\modbus\modbus.lib</FilePath>
+            </File>
+          </Files>
+        </Group>
       </Groups>
     </Target>
     <Target>
@@ -2246,7 +2265,6 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
-            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -2413,7 +2431,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <ClangAsOpt>1</ClangAsOpt>
+            <uClangAs>0</uClangAs>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -3399,6 +3417,16 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am165_core\wdg\demo_aml165_core_std_wwdg.c</FilePath>
             </File>
+            <File>
+              <FileName>demo_aml165_core_mb_master.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am165_core\modbus\demo_aml165_core_mb_master.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_aml165_core_mb_slave.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\am165_core\modbus\demo_aml165_core_mb_slave.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -4126,6 +4154,16 @@
             </File>
           </Files>
         </Group>
+        <Group>
+          <GroupName>modbus</GroupName>
+          <Files>
+            <File>
+              <FileName>modbus.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\components\modbus\modbus.lib</FilePath>
+            </File>
+          </Files>
+        </Group>
       </Groups>
     </Target>
   </Targets>
@@ -4135,20 +4173,5 @@
     <components/>
     <files/>
   </RTE>
-
-  <LayerInfo>
-    <Layers>
-      <Layer>
-        <LayName>&lt;Project Info&gt;</LayName>
-        <LayDesc></LayDesc>
-        <LayUrl></LayUrl>
-        <LayKeys></LayKeys>
-        <LayCat></LayCat>
-        <LayLic></LayLic>
-        <LayTarg>0</LayTarg>
-        <LayPrjMark>1</LayPrjMark>
-      </Layer>
-    </Layers>
-  </LayerInfo>
 
 </Project>
